# FastAPI-project

./: docker-compose.yml
backend/: .env.example  Dockerfile  auth.py  database.py  main.py  pyproject.toml  requirements.txt  test_api.py
backend/auth/: auth.py  utils.py
