[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["humzah286 <humzah286@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pytest = "^8.3.4"
pydantic = "^2.10.5"
pymongo = "^4.10.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
