[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["humzah286 <humzah286@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pytest = "^8.3.4"
pydantic = "^2.10.5"
pymongo = "^4.10.1"
uvicorn = "^0.34.0"
redis = {extras = ["async"], version = "^5.2.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
